Fixed possible problems where remapping can be wrong